Update LLMAgent HTTP handling
Swapping out the older java.net.* API for the new java.net.http.*

Also attempting to extend the default timeout to 2 minutes